# FIDU

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  acm-aliases.sh  build.py  main.spec  package-lock.json  package.json  pylint-all-after-fixes.txt  pylint-all.txt  pylint-final.txt  pylint-main-2.txt  pylint-main.txt  pyproject.toml  pytest-data_packets.txt  pytest.ini  requirements.txt  setup.py  test_build.spec  version.yaml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
docs/: CLOUD_MIGRATION.md  CLOUD_MIGRATION_PROGRESS.md  DATABASE_PATHS.md  IDENTITY_SERVICE_ENCRYPTION_ENDPOINTS.md  MACOS_COMPATIBILITY.md  MACOS_TROUBLESHOOTING.md  REFRESH_TOKEN_MIGRATION_FIDU_CHAT_GRABBER.md  REFRESH_TOKEN_MIGRATION_FIDU_CHAT_LAB.md  REFRESH_TOKEN_MIGRATION_FIDU_VAULT.md  RUNNING_FIDU_VAULT.md  VERSION_MANAGEMENT.md  WINDOWS_BUILD.md
scripts/: build_linux.sh  build_macos.sh  build_windows.bat  fix_macos_compatibility.sh  lint.sh  macos_launcher.sh  manage_hooks.sh  pre_commit_lint.sh  pre_push_lint.sh  run_fidu_windows.bat  setup_dev.sh  sync_versions.py  update_version.py
scripts/githooks/: pre-push
src/: __init__.py
src-tauri/: tauri.conf.json
src-tauri/src/: main.rs
src/apps/: README.md
src/apps/acm-front-end/: README.md  dev-workflow.sh  front-end-technical-description.html  manual.html  package-lock.json  package.json  vite.config.ts
src/apps/acm-front-end/src/: App.tsx
src/apps/chat-lab/: .gitignore  .prettierignore  AUTH_MANAGER_ARCHITECTURE.md  AUTH_MANAGER_IMPLEMENTATION_SUMMARY.md  CONVERSATION_FEATURES.md  DEPLOYMENT.md  KNIP_DISAGREEMENTS.md  README.md  TESTING.md  WORKSPACE_SWITCHING.md  deploy.sh  dev-workflow.sh  env.example  eslint.config.js  front-end-technical-description.html  index.html  jest.config.mjs  jest.transform.cjs  jest.transform.js  knip.json  manual.html  package-lock.json  package.json  prettier.config.mts  requirements.txt  server.py  tsconfig.app.json  tsconfig.jest.json  vite.config.ts
src/apps/chat-lab/backend/: README.md  (+4 more)
src/data_acquisition/: UPDATE_FUNCTIONALITY.md  __init__.py
src/data_acquisition/acm-manager/: README.md  manifest.json  test_auth.html  test_config.html  test_profiles.html  test_update_functionality.html
src/data_acquisition/chat-page-saver/: INSTALLATION.md  README.md  background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js  test-extension.js
src/data_acquisition/fidu-chat-grabber/: README.md  manifest.json
src/fidu_core/: README.md  __init__.py  main.py
src/fidu_core/api/: __init__.py  data_packet.py  data_submission.py
src/fidu_core/data_packets/: __init__.py  api.py  exceptions.py  schema.py  service.py  store.py
src/fidu_core/front_end/: README.md  __init__.py  api.py
src/fidu_core/identity_service/: client.py
src/fidu_core/profiles/: __init__.py  api.py  exceptions.py  schema.py  service.py  store.py
src/fidu_core/proxy/: README.md  __init__.py  config.py  nlp_workbench_proxy.py  router.py  server.py
src/fidu_core/resources/: __init__.py  data_packet.py
src/fidu_core/security/: __init__.py  jwt.py  password.py
src/fidu_core/users/: __init__.py  api.py  exceptions.py  schema.py  service.py  store.py
src/fidu_core/utils/: __init__.py  db.py  test_helpers.py
src/fidu_vault/: README.md  __init__.py  main.py
src/fidu_vault/api_keys/: README.md  __init__.py  api.py  exceptions.py  schema.py  service.py  store.py
src/fidu_vault/data_packets/: __init__.py  api.py  exceptions.py  schema.py
src/fidu_vault/front_end/: README.md  __init__.py  api.py
src/fidu_vault/identity_service/: auth_client.py  client.py  middleware.py
src/fidu_vault/profiles/: __init__.py  schema.py
src/fidu_vault/proxy/: README.md  __init__.py  config.py  server.py
src/fidu_vault/users/: __init__.py  schema.py
src/fidu_vault/utils/: __init__.py  db.py
src/fidu_vault/versioning/: version.py  version_api.py
(+539 files in other folders)
