[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fidu"
version = "0.1.1"
description = "A local API server for the Fidu desktop application"
authors = [{name = "FirstDataUnion", email = "oli@firstdataunion.org"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "jinja2>=3.1.6",
    "httpx>=0.28.1",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pycodestyle>=2.11.1",
    "pylint>=3.0.3",
    "black>=24.1.1",
    "mypy>=1.16.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.24.0",
    "pre-commit>=4.2.0",
    "pyinstaller>=6.14.2",
]

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--asyncio-mode=auto",
]
norecursedirs = [
    ".git",
    ".pytest_cache",
    "src-tauri/target",
    "src-tauri/node_modules",
    "node_modules",
    ".venv",
    "venv",
    "env",
    ".mypy_cache",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = false
strict_equality = false

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | src-tauri/target
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["fidu_vault"] 